--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "tailwindcss": "^3.4.7",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^9.39.0",
+    "eslint-plugin-react": "^7.37.5",
     "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "prettier": "^3.6.2",
+    "tailwindcss": "^3.4.7",
+    "vite": "^5.0.0"
   }
 }
